Fix spacing and layout of receivers' profile components

--- a/client/src/components/ReceiverProfile/ReceiverProfile.scss
+++ b/client/src/components/ReceiverProfile/ReceiverProfile.scss
@@ -5,3 +5,10 @@
   margin: 0 10%;
   justify-content: space-between;
 }
+.wishlist-donations-section {
+  display: flex;
+  // justify-content: space-around;
+  // height: 600px;
+  width: 80%;
+  margin: 0 10%;
+}
