--- a/client/src/components/ReceiverProfile/Wishlist.scss
+++ b/client/src/components/ReceiverProfile/Wishlist.scss
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-evenly;
   height: 600px;
-  width: 80%;
-  margin: 0 10%;
+  width: 50%;
+  // margin: 0 10%;
 }
 
 .wishlist-items-list {
